tests/models/struct/unnamed/u8/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    u8
);
fn main() {}
